# pytrack-desktop

./: .env.example  CHANGELOG.md  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  docker.yml
docker/: entrypoint.sh
packaging/arch/: PKGBUILD
packaging/chocolatey/: pytrack.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: Sidebar.tsx  UpdateChecker.tsx  ui.tsx
src/hooks/: useAuth.tsx
src/lib/: billing.ts  supabase.ts  trilhas.ts
src/screens/: Comunidade.tsx  Conteudos.tsx  Exercicios.tsx  Ia.tsx  Ide.tsx  Inicio.tsx  Login.tsx  Mfa.tsx  Notificacoes.tsx  Perfil.tsx  Placeholder.tsx  Plano.tsx  TrilhaDetalhe.tsx  Trilhas.tsx
